FactoryControlApp: Turning on Green light for non defected images and removal of reset button functionality.
Signed-off-by: Sagar TP <sagar.tp@intel.com>

--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
-  "io_module_ip"    : "localhost",
-  "io_module_port"  : "502",
-  "reset_button_in" : "di6",
-  "bit_register"    :  20
+  "io_module_ip"        : "localhost",
+  "io_module_port"      : "502",
+  "reset_button_in"     : "di6",
+  "red_bit_register"    :  20,
+  "green_bit_register"  : 19
 }
