--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
+  "output_stream"       : "stream1_results",
   "io_module_ip"        : "localhost",
   "io_module_port"      : "502",
-  "reset_button_in"     : "di6",
   "red_bit_register"    :  20,
   "green_bit_register"  : 19
 }
