--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,7 @@ services:
     hostname: ia_factoryctrl_app
     network_mode: host
     restart: unless-stopped
+    ipc: "none"
     environment:
       AppName: "FactoryControlApp"
       DEV_MODE: ${DEV_MODE}
