--- a/config.json
+++ b/config.json
@@ -1,6 +1,9 @@
 {
-    "io_module_ip": "localhost",
-    "io_module_port": 502,
-    "red_bit_register": 20,
-    "green_bit_register": 19
+    "/FactoryControlApp/config": {
+        "io_module_ip": "localhost",
+        "io_module_port": 502,
+        "red_bit_register": 20,
+        "green_bit_register": 19
+    },
+    "/FactoryControlApp/interfaces": {}
 }
