FactoryControlApp: Updates to ConfigManager integration pre-requisites
Signed-off-by: Vishwas R <vishwas.r@intel.com>

--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
-    "/FactoryControlApp/config": {
+    "config": {
         "io_module_ip": "localhost",
         "io_module_port": 502,
         "red_bit_register": 20,
         "green_bit_register": 19
     },
-    "/FactoryControlApp/interfaces": {}
+    "interfaces": {}
 }
