--- a/app_spec.json
+++ b/app_spec.json
@@ -20,9 +20,7 @@
            "DEV_MODE": "$DEV_MODE",
            "ETCD_PREFIX": "$ETCD_PREFIX",
            "CertType": "zmq",
-           "ZMQ_RECV_HWM": "50",
-           "SubTopics": "VideoAnalytics/camera1_stream_results",
-           "camera1_stream_results_cfg": "zmq_tcp,${ep.va-input.remoteaddress}:${ep.va-input.remoteport}"
+           "SUBSCRIBER_ENDPOINT": "${ep.va-input.remoteaddress}:${ep.va-input.remoteport}"
        },
        "Endpoints": [
            {
