--- a/config.json
+++ b/config.json
@@ -5,5 +5,17 @@
         "red_bit_register": 20,
         "green_bit_register": 19
     },
-    "interfaces": {}
+    "interfaces": {
+        "Subscribers": [
+            {
+                "Name": "default",
+                "Type": "zmq_tcp",
+                "EndPoint": "127.0.0.1:65013",
+                "PublisherAppName": "VideoAnalytics",
+                "Topics": [
+                    "camera1_stream_results"
+                ]
+            }
+        ]
+    }
 }
