--- a/k8s-service.yml
+++ b/k8s-service.yml
@@ -38,7 +38,7 @@ spec:
     spec:
       containers:
       - name: ia-factorycontrol-app
-        image: ia_factoryctrl_app:${EIS_VERSION}
+        image: ${DOCKER_REGISTRY}ia_factoryctrl_app:${EIS_VERSION}
         securityContext:
           privileged: true
 
