FactoryControl: Code change from EIS to EII
Signed-off-by: abhaskar <amritesh.bhaskar@intel.com>

--- a/k8s-service.yml
+++ b/k8s-service.yml
@@ -24,7 +24,7 @@ metadata:
   labels:
     app: factorycontrolapp
   name: deployment-factorycontrol-app
-  namespace: eis
+  namespace: eii
 
 spec:
   replicas: 1
@@ -38,12 +38,12 @@ spec:
     spec:
       containers:
       - name: ia-factorycontrol-app
-        image: ${DOCKER_REGISTRY}ia_factoryctrl_app:${EIS_VERSION}
+        image: ${DOCKER_REGISTRY}ia_factoryctrl_app:${EII_VERSION}
         securityContext:
           privileged: true
 
         volumeMounts:
-        - name: eis-socket
+        - name: eii-socket
           mountPath: ${SOCKET_DIR}
         - name: "ca-cert"
           mountPath: /run/secrets/ca_etcd
@@ -60,7 +60,7 @@ spec:
         - name: PROFILING_MODE
           value: '${PROFILING_MODE}'
         - name: no_proxy
-          value: '${eis_no_proxy},${ETCD_HOST}'
+          value: '${eii_no_proxy},${ETCD_HOST}'
         - name: ETCD_HOST
           value: etcd
         - name: ETCD_CLIENT_PORT
@@ -77,9 +77,9 @@ spec:
           value: "videoanalytics:65013"
 
       volumes:
-      - name: eis-socket
+      - name: eii-socket
         hostPath:
-          path: ${EIS_INSTALL_PATH}/sockets
+          path: ${EII_INSTALL_PATH}/sockets
       - name: "ca-cert"
         secret:
           secretName: ca-etcd
