--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,12 +29,12 @@ services:
       context: $PWD/../FactoryControlApp
       dockerfile: $PWD/../FactoryControlApp/Dockerfile
       args:
-        EIS_VERSION: ${EIS_VERSION}
-        EIS_UID: ${EIS_UID}
-        EIS_USER_NAME: ${EIS_USER_NAME}
+        EII_VERSION: ${EII_VERSION}
+        EII_UID: ${EII_UID}
+        EII_USER_NAME: ${EII_USER_NAME}
         DOCKER_REGISTRY: ${DOCKER_REGISTRY}
     read_only: true
-    image: ${DOCKER_REGISTRY}ia_factoryctrl_app:${EIS_VERSION}
+    image: ${DOCKER_REGISTRY}ia_factoryctrl_app:${EII_VERSION}
     container_name: ia_factoryctrl_app
     hostname: ia_factoryctrl_app
     network_mode: host
@@ -48,14 +48,14 @@ services:
     environment:
       AppName: "FactoryControlApp"
       DEV_MODE: ${DEV_MODE}
-      no_proxy: ${eis_no_proxy},${ETCD_HOST}
+      no_proxy: ${eii_no_proxy},${ETCD_HOST}
       ETCD_HOST: ${ETCD_HOST}
       ETCD_CLIENT_PORT: ${ETCD_CLIENT_PORT}
       ETCD_PREFIX: ${ETCD_PREFIX}
       CertType: "zmq"
     volumes:
-      - "vol_eis_socket:${SOCKET_DIR}"
-    user: ${EIS_UID}
+      - "vol_eii_socket:${SOCKET_DIR}"
+    user: ${EII_UID}
     secrets:
       - ca_etcd
       - etcd_FactoryControlApp_cert
