--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "config": {
-        "io_module_ip": "localhost",
+        "io_module_ip": "< host ip>",
         "io_module_port": 502,
         "red_bit_register": 20,
         "green_bit_register": 19
@@ -10,7 +10,7 @@
             {
                 "Name": "default",
                 "Type": "zmq_tcp",
-                "EndPoint": "127.0.0.1:65013",
+                "EndPoint": "ia_video_analytics:65013",
                 "PublisherAppName": "VideoAnalytics",
                 "Topics": [
                     "camera1_stream_results"
