--- a/helm/templates/factorycontrolapp.yaml
+++ b/helm/templates/factorycontrolapp.yaml
@@ -39,7 +39,7 @@ spec:
     spec:
       containers:
       - name: ia-factorycontrol-app
-        image: {{ .Values.registry }}ia_factoryctrl_app:{{ .Values.eii_version }}
+        image: {{ .Values.DOCKER_REGISTRY }}ia_factoryctrl_app:{{ .Values.EII_VERSION }}
         imagePullPolicy: {{ .Values.imagePullPolicy }}
         securityContext:
           privileged: true
@@ -48,7 +48,7 @@ spec:
         - name: {{ .Values.volumes.eii_socket.name }}
           mountPath: {{ .Values.volumes.eii_socket.location }}
         {{- end }}
-        {{ if eq .Values.env.dev_mode false}}
+        {{ if eq .Values.env.DEV_MODE false}}
         - name: etcd-certs
           mountPath: /run/secrets/etcd/
         {{ end }}
@@ -57,7 +57,7 @@ spec:
         - name: AppName
           value: "FactoryControlApp"
         - name: DEV_MODE
-          value: '{{ .Values.env.dev_mode }}'
+          value: '{{ .Values.env.DEV_MODE }}'
         - name: ETCD_HOST
           value: {{ .Values.config.etcd.name }}
         - name: ETCD_CLIENT_PORT
@@ -77,7 +77,7 @@ spec:
         - name: SUBSCRIBER_TYPE
           value: "zmq_ipc"
         {{- end }}
-        {{ if eq .Values.env.dev_mode false}}
+        {{ if eq .Values.env.DEV_MODE false}}
         - name: CONFIGMGR_CACERT
           value: "/run/secrets/etcd/ca_certificate.pem"
         - name: CONFIGMGR_CERT
@@ -92,7 +92,7 @@ spec:
         persistentVolumeClaim:
           claimName: {{ .Values.volumes.eii_socket.name }}
       {{- end }}
-      {{ if eq .Values.env.dev_mode false}}
+      {{ if eq .Values.env.DEV_MODE false}}
       - name: etcd-certs
         secret:
           secretName: eii-certs
