--- a/helm/templates/factorycontrolapp.yaml
+++ b/helm/templates/factorycontrolapp.yaml
@@ -37,6 +37,10 @@ spec:
       labels:
         app: factorycontrolapp
     spec:
+      {{- if and .Values.DOCKER_USERNAME .Values.DOCKER_PASSWORD }}
+      imagePullSecrets:
+      - name: registryauth
+      {{- end }}
       containers:
       - name: ia-factorycontrol-app
         image: {{ .Values.DOCKER_REGISTRY }}ia_factoryctrl_app:{{ .Values.EII_VERSION }}
