--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,18 +52,9 @@ services:
       ETCD_HOST: ${ETCD_HOST}
       ETCD_CLIENT_PORT: ${ETCD_CLIENT_PORT}
       ETCD_PREFIX: ${ETCD_PREFIX}
-      CertType: "zmq"
     networks:
       - eii
     volumes:
       - "vol_eii_socket:${SOCKET_DIR}"
-    secrets:
-      - ca_etcd
-      - etcd_FactoryControlApp_cert
-      - etcd_FactoryControlApp_key
-
-secrets:
-  etcd_FactoryControlApp_cert:
-    file: provision/Certificates/FactoryControlApp/FactoryControlApp_client_certificate.pem
-  etcd_FactoryControlApp_key:
-    file: provision/Certificates/FactoryControlApp/FactoryControlApp_client_key.pem
+      - ./Certificates/FactoryControlApp:/Certificates/FactoryControlApp
+      - ./Certificates/rootca:/Certificates/rootca
