docker-compose.yml: Fixed the container mount point
Signed-off-by: Vinod K B <vinod.k.b@intel.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,5 +56,5 @@ services:
       - eii
     volumes:
       - "vol_eii_socket:${SOCKET_DIR}"
-      - ./Certificates/FactoryControlApp:/Certificates/FactoryControlApp
-      - ./Certificates/rootca:/Certificates/rootca
+      - ./Certificates/FactoryControlApp:/run/secrets/FactoryControlApp
+      - ./Certificates/rootca:/run/secrets/rootca
