--- a/helm/templates/factorycontrolapp.yaml
+++ b/helm/templates/factorycontrolapp.yaml
@@ -83,7 +83,7 @@ spec:
         {{- end }}
         {{ if eq .Values.env.DEV_MODE false}}
         - name: CONFIGMGR_CACERT
-          value: "/run/secrets/etcd/ca_certificate.pem"
+          value: "/run/secrets/etcd/cacert.pem"
         - name: CONFIGMGR_CERT
           value: "/run/secrets/etcd/FactoryControlApp_client_certificate.pem"
         - name: CONFIGMGR_KEY
@@ -101,8 +101,8 @@ spec:
         secret:
           secretName: eii-certs
           items:
-          - key: ca_certificate.pem
-            path: ca_certificate.pem
+          - key: cacert.pem
+            path: cacert.pem
           - key: FactoryControlApp_client_certificate.pem
             path: FactoryControlApp_client_certificate.pem
           - key: FactoryControlApp_client_key.pem
