--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,5 +56,5 @@ services:
       - eii
     volumes:
       - "vol_eii_socket:${SOCKET_DIR}"
-      - ./Certificates/FactoryControlApp:/run/secrets/FactoryControlApp
-      - ./Certificates/rootca:/run/secrets/rootca
+      - ./Certificates/FactoryControlApp:/run/secrets/FactoryControlApp:ro
+      - ./Certificates/rootca/cacert.pem:/run/secrets/rootca/cacert.pem:ro
